# MMIS

./: .gitignore  Jenkinsfile  LICENSE  README.md  pyproject.toml
app/backend/: dashboard.py  main.py
app/backend/db/: database.py
app/backend/rss_module/: Jenkinsfile  rss_eye.py
app/backend/telegram_module/: Dockerfile  docker-compose.yml
app/backend/telegram_module/app/: config_encryption.py  entrypoint.py  requirements.txt  telegram_bot.py  telegram_eye.py
app/backend/telegram_module/telegram_bot/: Dockerfile.telegram_bot  requirements.txt  telegram_bot.py
app/backend/telegram_module/telegram_eye/: Dockerfile.telegram_eye  telegram_eye.py
app/backend/vk_module/: vk_eye.py
app/frontend/static/css/: style.css
app/frontend/static/js/: main.js
app/frontend/templates/: dashboard.html  index.html
