[project]
name = "mmis"
version = "0.0.1"
description = "Mentions monitoring information system"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "aiosqlite>=0.21.0",
    "cachetools>=6.0.0",
    "fastapi>=0.115.12",
    "feedparser>=6.0.11",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.3",
]
